Fix alignment issues

--- a/sites/all/modules/custom/user_login_modal/user_login_modal.css
+++ b/sites/all/modules/custom/user_login_modal/user_login_modal.css
@@ -11,12 +11,14 @@
   padding-left: 20px;
   border-left: 1px #ccc solid;
 }
+.popup-login-inner {
+  padding: 15px;
+}
 .popup-login-inner.mobile {
   width: 300px;
+  padding: 0;
 }
 .popup-login-inner.mobile .popup-tab {
-  /*width: 320px;*/
-
   float: none;
 }
 .popup-login-inner.mobile .popup-tab div#user-register {
@@ -25,9 +27,6 @@
   border-top: 2px #ccc solid;
   padding-top: 15px;
 }
-/*.popup-tab#tabs-2 {*/
-  /*width: 300px;*/
-/*}*/
 .popup-tab input.form-text {
   width: 270px;
 }
